--- a/debian/dummy/apache.conf
+++ b/debian/dummy/apache.conf
@@ -47,28 +47,29 @@
 
           # enable safe PHP operation
           php_admin_value safe_mode on
-		  php_admin_value safe_mode_gid on
+          php_admin_value safe_mode_gid on
           # php_admin_value safe_mode_include_dir /usr/share/typo3/typo3_src-4.2/
 
           #  Maximum allowed size for uploaded files (PHP defaults to 2MB)
           php_admin_value upload_max_filesize 10M
+          php_admin_value upload_tmp_dir /var/tmp/typo3-dummy
 
           # Maximum amount of memory a script may consume (PHP defaults to 8MB)
-		  # You may want to set this higher as 48 mb if you have problems
-		  # getting the extension manager to work.
+          # You may want to set this higher as 48 mb if you have problems
+          # getting the extension manager to work.
           php_admin_value memory_limit 48M
 
-		  # Maximum amount of time a script my consume
-		  # You may want to set this higher as 30 seconds if you have problems
-		  # getting the extension manager to work.
+          # Maximum amount of time a script my consume
+          # You may want to set this higher as 30 seconds if you have problems
+          # getting the extension manager to work.
           # php_admin_value max_execution_time 90
 
           # list of directories where require(), include() and fopen_with_path() look for files
           php_admin_value include_path /var/lib/typo3-dummy/:/usr/share/typo3/typo3_src-4.2/:.
           php_admin_value sendmail_path /var/lib/typo3-dummy/execdir/sendmail
-          
+
           # Limit the files that can be opened by PHP to the specified directory-tree(s)
-          php_admin_value open_basedir /var/lib/typo3-dummy/:/usr/share/typo3/:/usr/share/typo3-dummy/:/etc/typo3-dummy/:/usr/share/fonts/truetype/ttf-dejavu/
+          php_admin_value open_basedir /var/tmp/typo3-dummy/:/var/lib/typo3-dummy/:/usr/share/typo3/:/usr/share/typo3-dummy/:/etc/typo3-dummy/:/usr/share/fonts/truetype/ttf-dejavu/
 
           # in safe mode programs that are not in this directory will not be started
           php_admin_value safe_mode_exec_dir /var/lib/typo3-dummy/execdir/
@@ -99,14 +100,15 @@
 
           AddType application/x-httpd-php .php
           php_admin_value safe_mode on
-		  php_admin_value safe_mode_gid on
+          php_admin_value safe_mode_gid on
           # php_admin_value safe_mode_include_dir /usr/share/typo3/typo3_src-4.2/
           php_admin_value upload_max_filesize 10M
+          php_admin_value upload_tmp_dir /var/tmp/typo3-dummy
           php_admin_value memory_limit 48M
           # php_admin_value max_execution_time 90
           php_admin_value include_path /var/lib/typo3-dummy/:/usr/share/typo3/typo3_src-4.2/:.
           php_admin_value sendmail_path /var/lib/typo3-dummy/execdir/sendmail
-          php_admin_value open_basedir /var/lib/typo3-dummy/:/usr/share/typo3/:/etc/typo3-dummy/:/usr/share/fonts/truetype/ttf-dejavu/
+          php_admin_value open_basedir /var/tmp/typo3-dummy/:/var/lib/typo3-dummy/:/usr/share/typo3/:/etc/typo3-dummy/:/usr/share/fonts/truetype/ttf-dejavu/
           php_admin_value safe_mode_exec_dir /var/lib/typo3-dummy/execdir/
           php_flag allow_call_time_pass_reference off
           php_flag register_globals off
@@ -149,7 +151,7 @@
 
         # If you use Windows and SimulateStaticDocuments do not work, try adding a
         # slash (/) right before 'index.php' below.
-        
+
         # The example shows how to rewrite only *.html and *.pdf files to index.php
         # This may be helpful when using an extension that can generate PDF files
         # on the fly.
