--- a/debian/dummy/rules
+++ b/debian/dummy/rules
@@ -14,6 +14,7 @@ INSTALLDIR=debian/$(PACKAGENAME)
 DBSRCDIR=usr/share/$(PACKAGENAME)
 DOCROOTDIR=var/lib/$(PACKAGENAME)
 ETCDIR=etc/$(PACKAGENAME)
+TMPDIR=var/tmp/$(PACKAGENAME)
 
 build: build-stamp
 
@@ -31,7 +32,7 @@ install: build
 	dh_testdir
 	dh_testroot
 	dh_clean -k
-	dh_installdirs $(DOCROOTDIR) $(ETCDIR)
+	dh_installdirs $(DOCROOTDIR) $(ETCDIR) $(TMPDIR)
 	dh_install index.php clear.gif $(DOCROOTDIR)
 	dh_install fileadmin/ $(DOCROOTDIR)
 	dh_install typo3temp/ $(DOCROOTDIR)
@@ -60,6 +61,8 @@ binary-indep: build install
 		/usr/sbin/sendmail  $(DOCROOTDIR)/execdir/sendmail
 	dh_compress
 	dh_fixperms
+	chown -hR www-data:www-data $(INSTALLDIR)/$(TMPDIR)
+	chmod 0700 $(INSTALLDIR)/$(TMPDIR)
 	dh_installdeb
 	dh_shlibdeps
 	dh_gencontrol
