--- a/debian/dummy/rules
+++ b/debian/dummy/rules
@@ -8,7 +8,7 @@ include /usr/share/dpatch/dpatch.make
 SHORTNAME=dummy
 PACKAGENAME=typo3-$(SHORTNAME)
 # set link to the typo3 source dir
-T3PACKAGENAME=typo3_src-4.2
+T3PACKAGENAME=typo3_src-4.3
 
 INSTALLDIR=debian/$(PACKAGENAME)
 DBSRCDIR=usr/share/$(PACKAGENAME)
@@ -16,16 +16,11 @@ DOCROOTDIR=var/lib/$(PACKAGENAME)
 ETCDIR=etc/$(PACKAGENAME)
 TMPDIR=var/run/$(PACKAGENAME)
 
-build: build-stamp
-
-build-stamp: patch-stamp
-	dh_testdir
-	touch build-stamp
+build: patch-stamp
 
 clean: unpatch
 	dh_testdir
 	dh_testroot
-	rm -f build-stamp
 	dh_clean
 
 install: build
@@ -64,6 +59,9 @@ binary-indep: build install
 	dh_fixperms
 	chown -hR www-data:www-data $(INSTALLDIR)/$(TMPDIR)
 	chmod 0750 $(INSTALLDIR)/$(TMPDIR)
+	chown -hR www-data:www-data $(INSTALLDIR)/$(DOCROOTDIR)
+	chown www-data:www-data $(INSTALLDIR)/$(ETCDIR)/localconf.php
+	chmod 600 $(INSTALLDIR)/$(ETCDIR)/localconf.php
 	dh_installdeb
 	dh_shlibdeps
 	dh_gencontrol
