--- a/4.2/dummy/apache.conf
+++ b/4.2/dummy/apache.conf
@@ -66,10 +66,10 @@
 
           # list of directories where require(), include() and fopen_with_path() look for files
           php_admin_value include_path /var/lib/typo3-dummy/:/usr/share/typo3/typo3_src-4.2/:.
-          php_admin_value sendmail_path /var/lib/typo3-dummy/execdir/sendmail
+          php_admin_value sendmail_path "/var/lib/typo3-dummy/execdir/sendmail -t -i"
 
           # Limit the files that can be opened by PHP to the specified directory-tree(s)
-          php_admin_value open_basedir /var/run/typo3-dummy/:/var/lib/typo3-dummy/:/usr/share/typo3/:/usr/share/typo3-dummy/:/etc/typo3-dummy/:/usr/share/fonts/truetype/ttf-dejavu/
+          php_admin_value open_basedir /var/run/typo3-dummy/:/var/lib/typo3-dummy/:/usr/share/typo3/:/etc/typo3-dummy/:/usr/share/fonts/truetype/ttf-dejavu/:/usr/share/javascript/prototype/:/usr/share/javascript/scriptaculous/
 
           # in safe mode programs that are not in this directory will not be started
           php_admin_value safe_mode_exec_dir /var/lib/typo3-dummy/execdir/
@@ -107,8 +107,8 @@
           php_admin_value memory_limit 48M
           # php_admin_value max_execution_time 90
           php_admin_value include_path /var/lib/typo3-dummy/:/usr/share/typo3/typo3_src-4.2/:.
-          php_admin_value sendmail_path /var/lib/typo3-dummy/execdir/sendmail
-          php_admin_value open_basedir /var/run/typo3-dummy/:/var/lib/typo3-dummy/:/usr/share/typo3/:/etc/typo3-dummy/:/usr/share/fonts/truetype/ttf-dejavu/
+          php_admin_value sendmail_path "/var/lib/typo3-dummy/execdir/sendmail -t -i"
+          php_admin_value open_basedir /var/run/typo3-dummy/:/var/lib/typo3-dummy/:/usr/share/typo3/:/etc/typo3-dummy/:/usr/share/fonts/truetype/ttf-dejavu/:/usr/share/javascript/prototype/:/usr/share/javascript/scriptaculous/
           php_admin_value safe_mode_exec_dir /var/lib/typo3-dummy/execdir/
           php_flag allow_call_time_pass_reference off
           php_flag register_globals off
