--- a/debian/src/rules
+++ b/debian/src/rules
@@ -12,25 +12,18 @@ DBASEPACKAGE=typo3-database
 
 T3SRCDIR=usr/share/typo3/$(PACKAGENAME)
 T3EXTDIR=usr/share/typo3/$(PACKAGENAME)/typo3/ext
-TABLESQLDIR=usr/share/typo3
+SQLDIR=usr/share/dbconfig-common/data/$(DBASEPACKAGE)/install
 
 SOURCEINSTALLDIR=debian/$(SOURCEPACKAGE)/$(T3SRCDIR)
-SQLINSTALLDIR=debian/$(SOURCEPACKAGE)/$(TABLESQLDIR)
+SQLINSTALLDIR=debian/$(DBASEPACKAGE)/$(SQLDIR)
 
-build-stamp:
-	for i in $$(cat debian/sql_locations.txt); do cat $$i >> debian/table.sql; done
-	gzip -9 debian/table.sql
-	touch build-stamp
-
-build: patch-stamp build-stamp
+build: patch-stamp
 
 clean: unpatch
 	dh_testdir
 	dh_testroot
 	dh_clean
-	rm -f build-stamp
 	rm -f $(SOURCEINSTALLDIR)/t3lib/fonts/nimbus.sfd.gz
-	rm -f debian/table.sql
 
 install: build
 	dh_testdir
@@ -38,28 +31,36 @@ install: build
 	dh_clean -k
 	dh_installdirs -p $(SOURCEPACKAGE) $(T3SRCDIR)
 	dh_installdirs -p $(SOURCEPACKAGE) $(T3EXTDIR)
+	dh_installdirs -p $(DBASEPACKAGE) $(SQLDIR) etc/$(DBASEPACKAGE)
 	cp -r index.php misc t3lib typo3 $(SOURCEINSTALLDIR)
 	perl -ne 'print(unpack "u", $$_);' debian/nimbus.sfd.gz.uuencoded > $(SOURCEINSTALLDIR)/t3lib/fonts/nimbus.sfd.gz
-	mv debian/table.sql.gz $(SQLINSTALLDIR)/$(PACKAGENAME).sql.gz
+	cp debian/mysql $(SQLINSTALLDIR)
 	rm -f $(SOURCEINSTALLDIR)/typo3/LICENSE.txt
 	rm -f $(SOURCEINSTALLDIR)/typo3/sysext/rtehtmlarea/htmlarea/HTMLAREA_LICENSE.txt
 	rm -f $(SOURCEINSTALLDIR)/typo3/sysext/adodb/adodb/license.txt
 	rm -f $(SOURCEINSTALLDIR)/typo3/sysext/t3editor/LICENSE
 	rm -f $(SOURCEINSTALLDIR)/typo3/sysext/t3editor/jslib/codemirror/LICENSE
 	rm -f $(SOURCEINSTALLDIR)/typo3/sysext/openid/lib/php-openid/COPYING
+	rm -f $(SOURCEINSTALLDIR)/typo3/contrib/extjs/LICENSE.txt
+	rm -f $(SOURCEINSTALLDIR)/typo3/contrib/swfupload/license.txt
+	rm -f $(SOURCEINSTALLDIR)/typo3/sysext/rsaauth/resources/jsbn/LICENSE
+	rm -f $(SOURCEINSTALLDIR)/typo3/contrib/swfupload/plugins/swfobject_license.txt
 	rm -f $(SOURCEINSTALLDIR)/t3lib/fonts/vera.ttf
 	rm -f $(SOURCEINSTALLDIR)/typo3/contrib/prototype/prototype.js
 	rm -rf $(SOURCEINSTALLDIR)/typo3/contrib/scriptaculous
+	rm -rf $(SOURCEINSTALLDIR)/typo3/sysext/adodb/adodb
+	rm -f $(SOURCEINSTALLDIR)/typo3/contrib/flashmedia/player.txt
 
 binary-indep: build install
 	dh_testdir
 	dh_testroot
-	dh_installchangelogs -A ChangeLog
-	dh_installdocs -A RELEASE_NOTES.txt README.txt NEWS.txt INSTALL.txt
+	dh_lintian
+	dh_installdebconf
+	dh_installchangelogs -Ntypo3 -A ChangeLog
+	dh_installdocs -Ntypo3 -A RELEASE_NOTES.txt README.txt NEWS.txt
 	dh_installexamples -p $(SOURCEPACKAGE) misc/advanced.htaccess
 	dh_link
-	dh_strip
-	dh_compress
+	dh_compress -Ntypo3
 	dh_fixperms
 	chown -hR root:www-data $(SOURCEINSTALLDIR)
 	dh_installdeb
