--- a/debian/dummy/apache.conf
+++ b/debian/dummy/apache.conf
@@ -1,18 +1,12 @@
 # Configuration for the apache web server                 -*- apache -*-
 
-# inspired by /etc/phpldapadmin/apache.conf from the Debian package of
-# phpldapadmin (version 0.9.4-10) maintained by Fabio Tranchitella
-# <kobold@kobold.it>
-
-# improved through advanced.htaccess from Michael Stucki <mundaun@gmx.ch>
-
 
 # Define the package aliases.  The following directive defines the
-# /TYPO3root as /typo3.  If this is changed, search for 
-# TYPO3root and adapt the found directives appropriate.
+# /TYPO3root as /cms.  If this is changed, search for 
+# /cms and adapt the found directives appropriate.
 
 <IfModule mod_alias.c>
-    Alias /typo3 /var/lib/typo3-dummy
+    Alias /cms /var/lib/typo3-dummy
 </IfModule>
 
 
@@ -65,12 +59,11 @@
           # php_admin_value max_execution_time 90
 
           # list of directories where require(), include() and fopen_with_path() look for files
-          php_admin_value include_path /var/lib/typo3-dummy/:/usr/share/typo3/typo3_src-4.3/:.
-          php_admin_value sendmail_path /var/lib/typo3-dummy/execdir/sendmail
+          php_admin_value include_path /var/lib/typo3-dummy/:/usr/share/typo3/typo3_src-4.3/:.:/usr/share/php:/usr/share/pear
+          php_admin_value sendmail_path "/var/lib/typo3-dummy/execdir/sendmail -t -i"
 
           # Limit the files that can be opened by PHP to the specified directory-tree(s)
-          php_admin_value open_basedir /var/run/typo3-dummy/:/var/lib/typo3-dummy/:/usr/share/typo3/:/etc/typo3-dummy/:/usr/share/fonts/truetype/ttf-dejavu/
-
+          php_admin_value open_basedir /var/run/typo3-dummy/:/var/lib/typo3-dummy/:/usr/share/typo3/:/etc/typo3-dummy/:/usr/share/fonts/truetype/ttf-dejavu/:/usr/share/javascript/prototype/:/usr/share/javascript/scriptaculous/
           # in safe mode programs that are not in this directory will not be started
           php_admin_value safe_mode_exec_dir /var/lib/typo3-dummy/execdir/
 
@@ -112,11 +105,11 @@
         #RewriteLogLevel 9
 
         # Stop rewrite processing if we are in the typo3/ directory
-        RewriteRule ^/typo3/(typo3|typo3temp|typo3conf|t3lib|fileadmin|uploads)/ - [L]
+        RewriteRule ^/cms/(typo3|typo3temp|typo3conf|t3lib|fileadmin|uploads)/ - [L]
 
-        # Redirect http://mysite/typo3 to http://mysite/typo3/index_re.php
+        # Redirect http://mysite/cms/typo3 to http://mysite/cms/typo3/index_re.php
         # and stop the rewrite processing
-        RewriteRule ^/typo3/typo3$ /typo3/typo3/index.php [L]
+        RewriteRule ^/cms/typo3$ /cms/typo3/index.php [L]
 
         # If the file/symlink/directory does not exist => Redirect to index.php
         # RewriteCond %{DOCUMENT_ROOT}%{REQUEST_FILENAME} !-f
@@ -133,7 +126,7 @@
         # on the fly.
         # Example: RewriteRule .*\.(html|pdf)$ index.php [L]
 
-        RewriteRule .* /typo3/index.php [L]
+        RewriteRule .* /cms/index.php [L]
 
         ### End: Rewrite stuff ###
     </IfModule>
