--- a/debian/dummy/apache-directory.conf
+++ b/debian/dummy/apache-directory.conf
@@ -10,16 +10,6 @@
 </IfModule>
 
 
-# To use TYPO3 as a VirtualHost, comment out and customize the following section
-# <VirtualHost *:*>
-#     ServerName typo3.example.com
-#     ServerAdmin webmaster@example.com
-#     DocumentRoot /var/lib/typo3-dummy
-#     ErrorLog logs/typo3.example.com-error.log
-#     CustomLog logs/typo3.example.com-access.log combined
-# </VirtualHost>
-
-
 <DirectoryMatch /var/lib/typo3-dummy/>
 
     DirectoryIndex index.php index.html
@@ -98,37 +88,23 @@
         # Enable URL rewriting
         RewriteEngine On
 
-        # To assist in debugging rewriting, you could use these lines
-        # DON'T enable it for production!
-        # This will only work in httpd.conf, not in .htaccess files
-        #RewriteLog /var/log/apache/rewrite.log
-        #RewriteLogLevel 9
-
         # Stop rewrite processing if we are in the typo3/ directory
         RewriteRule ^/cms/(typo3|typo3temp|typo3conf|t3lib|fileadmin|uploads)/ - [L]
 
         # Redirect http://mysite/cms/typo3 to http://mysite/cms/typo3/index_re.php
         # and stop the rewrite processing
-        RewriteRule ^/cms/typo3$ /cms/typo3/index.php [L]
+        RewriteRule ^/cms/typo3$ /cms/typo3/index_re.php [L]
 
         # If the file/symlink/directory does not exist => Redirect to index.php
-        # RewriteCond %{DOCUMENT_ROOT}%{REQUEST_FILENAME} !-f
-        # RewriteCond %{DOCUMENT_ROOT}%{REQUEST_FILENAME} !-d
-        # RewriteCond %{DOCUMENT_ROOT}%{REQUEST_FILENAME} !-l
         RewriteCond %{REQUEST_FILENAME} !-f
         RewriteCond %{REQUEST_FILENAME} !-d
         RewriteCond %{REQUEST_FILENAME} !-l
 
         # Main URL rewriting.
-
-        # The example shows how to rewrite only *.html and *.pdf files to index.php
-        # This may be helpful when using an extension that can generate PDF files
-        # on the fly.
-        # Example: RewriteRule .*\.(html|pdf)$ index.php [L]
-
         RewriteRule .* /cms/index.php [L]
 
-        ### End: Rewrite stuff ###
     </IfModule>
+    ### End: Rewrite stuff ###
 
 </DirectoryMatch>
+
