--- a/debian/src/control
+++ b/debian/src/control
@@ -2,13 +2,13 @@ Source: typo3-src
 Section: web
 Priority: optional
 Maintainer: Christian Welzel <gawain@camlann.de>
-Build-Depends: debhelper (>= 6.0.7), dpatch
-Standards-Version: 3.8.4
+Build-Depends: debhelper (>= 6.0.7)
+Standards-Version: 3.9.1
 
 Package: typo3-src-4.3
 Architecture: all
 Depends: ttf-dejavu, libjs-prototype (>=1.6.0), libjs-scriptaculous (>=1.8.1), libphp-adodb (>=5.07), ${misc:Depends}
-Recommends: exim4 | mail-transport-agent, graphicsmagick, libapache2-mod-php5 | php5-cgi, php5-cli, php5-gd, php5-mysql, php5-xcache, typo3-database, typo3-dummy
+Recommends: exim4 | mail-transport-agent, graphicsmagick, php5, php5-cli, php5-gd, php5-mysql, php5-xcache, typo3-database, typo3-dummy
 Suggests: catdoc, ghostscript, php5-curl, ppthtml, unrtf, xlhtml, xpdf-utils
 Homepage: http://www.typo3.com
 Description: TYPO3 - The enterprise level open source WebCMS (Core)
@@ -79,3 +79,4 @@ Description: The enterprise level open source WebCMS (Meta)
  .
  This package depends on all TYPO3 packages that are neccassary to build a local
  running TYPO3 installation.
+
